implement extension list rendering and styling

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             ><a href="#active">Active</a><a href="#inactive">Inactive</a>
           </nav>
         </div>
+        <ul class="extensionsList">
+          
+        </ul>
       </main>
     </div>
 
