feat: enhance UI with real data switcher and animations, update styles and handlers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           </svg>
           Extensions</a
         >
+        <div id="realDataSwitcher" class="text-preset-5 visually-hidden">
+          <label for="dataSwitcher" aria-label="real data switcher"
+            ><input type="checkbox" name="dataSwitcher" id="dataSwitcher"
+          /></label>
+         
+        </div>
         <label for="themeSwitcher" aria-label="theme switcher"
           ><input type="checkbox" name="themeSwitcher" id="themeSwitcher"
         /></label>
@@ -45,7 +51,10 @@
         </ul>
       </main>
     </div>
-
-    <script type="module" src="./index.js"></script>
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js" integrity="sha512-aNMyYYxdIxIaot0Y1/PLuEu3eipGCmsEUBrUq+7aVyPGMFH8z0eTP0tkqAvv34fzN6z+201d3T8HPb1svWSKHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="./index.js">
+     
+    </script>
   </body>
 </html>
