--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <a href="/" class="extansionLogo"
+        <a href="/Extensions-UI" class="extansionLogo"
           ><svg class="icon">
             <use xlink:href="./assets/images/logo.svg#logo"></use>
           </svg>
