--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       }
     </script>
     <script
+      defer
       src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js"
       integrity="sha512-aNMyYYxdIxIaot0Y1/PLuEu3eipGCmsEUBrUq+7aVyPGMFH8z0eTP0tkqAvv34fzN6z+201d3T8HPb1svWSKHQ=="
       crossorigin="anonymous"
