--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Browser extensions manager UI</title>
   </head>
   <body>
+    <div class="bg"></div>
     <div class="wrapper">
       <header>
         <a href="/Extensions-UI" class="extansionLogo"
